--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,52 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    <div class="container float-left">
+        <h2>Active Listings</h2>
+        {% for listing in listings %}
+        <!-- from https://coreui.io/docs/components/bootstrap/card/ -->
+        <div class="card m-3">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    {% if listing.image %}
+                        <img src="{{listing.image.url}}" class="img-fluid"
+                        alt="{{listing.title}}">
+                    {% else %}
+                        <img src="/static/auctions/default.jpg" class="img-fluid"
+                        alt="quixote">
+                    {% endif %}
+              
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">{{listing.title}}</h5>
+                      <p class="card-text">
+                          {{listing.description}}
+                      </p>
+                      <p class="card-text"><small class="text-muted">
+                          Created at: {{listing.created_at}}
+                      </small></p>
+                      <a href="{% url 'listing' listing.id %}"><button
+                      class="btn btn-primary">More details</button></a>
+                    </div>
+                  </div>
 
-    TODO
+                <!-- <p><small>{{listing.description}}</small></p>
+                <span class="badge badge-info badge-pill">Current bid: {{listing.minPrice}}</span>
+                </div> -->
+                <!-- <div class="image-parent">
+                    {% if listing.image_url %}
+                        <img src={{listing.image}} class="img-fluid"
+                        alt="{{listing.title}}">
+                    {% else %}
+                        <img src="/static/auctions/default.jpg" class="img-fluid"
+                        alt="quixote">
+                    {% endif %}
+                </div> -->
+            </a>
+            
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 {% endblock %}
