filter by category

--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container float-left">
-        <h2>Active Listings</h2>
+        <h2>Listing in category '{{category}}'</h2>
         {% for listing in listings %}
         <div class="card m-3">
             <div class="row no-gutters">
